--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,10 @@
    
     
 }
+.cardB{
+    box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.25);
+
+}
 
 @media (min-width: 1000px){
     #itens{
@@ -14,6 +18,29 @@
 }
 
 @media (max-width: 1000px){
+    .collapse, .navbar-nav{
+        background-color: #fff !important;
+        height: 100vh !important;
+        width: 40vw !important;
+        z-index: 10;
+        transition: all 0.5s;
+        align-items:  center !important;
+        
+
+    }
+
+    .nav-item a{
+        font-weight: 300 !important;
+        text-align: left !important;
+
+    }
+    .ctt{
+        background-color:transparent !important;
+        color: rgb(0, 0, 0) !important;
+        box-shadow: none !important;
+        font-weight: 300 !important;
+    }
+
     #espaco{
         width: 0%;
     }
@@ -49,9 +76,30 @@
        justify-content: center !important;
        width: 100% !important;
        text-align: center;
+       height: 95% !important;
+       
        
     }
     #slogan span{
         margin: 0  !important;
+        font-size: 4rem !important;
+    }
+    #seta{
+        width: 5% !important;
+    }
+    #cardB{
+
+    }
+    
+    #cardsBeneficios{
+       
+    }
+    #blocos{
+        height: 50% !important;
+        width: 100% !important;
+    }
+   
+    .fa-solid{
+        font-size: 50px !important;
     }
 }
