--- a/CSS/carrossel.css
+++ b/CSS/carrossel.css
@@ -8,10 +8,15 @@
     background-size: cover;
     background-position: center;
 }
+
+#squareCard:hover{
+  background-color: black !important;
+  
+}
   
 .card{
-    border-radius: 25px !important;
-    box-shadow: 4px 4px 15px 4px rgba(0, 0, 0, 0.25);
+   
+    box-shadow: 4px 4px 7px  rgba(0, 0, 0, 0.25);
     cursor: pointer;
 }
   
