--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,9 @@
     box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.25);
 
 }
-
+#pJS,#p1JS,#p2JS,#p3JS{
+    display: none;
+}
 .cardC{
     width: 100vw;
     height: 45vh;
@@ -25,9 +27,36 @@
     
 }
 
-card-imgArea{
-
-}
+a {
+    position: relative;
+    text-decoration: none;  
+    
+  }
+  
+   nav li a:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    bottom:0;
+    left: 0;
+    background-color: #924da7;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  align-items: center;
+  } 
+  
+  
+  
+  li a:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    color: rgb(255, 255, 255);
+  }
   
   
   .card{
@@ -76,7 +105,7 @@ card-imgArea{
 }
 
 @media (max-width: 1000px){
-    .collapse, .navbar-nav{
+   .collapse, #nsei /*troquei por estar dando interferencia*/{ 
         background-color: #fff !important;
         height: 100vh !important;
         width: 40vw !important;
